objects/TracRTC__History_Log__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Evaluated_Fields__c</fullName>
        <label>Evaluated Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Name__c</fullName>
        <formula>TracRTC__Flow_Step__r.TracRTC__Flow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Step_Evaluated_As__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Step Evaluated As</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Step</label>
        <referenceTo>TracRTC__Flow_Step__c</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__History_Index__c</fullName>
        <formula>TEXT(TracRTC__Log_Date__c) &amp; &quot; &quot; &amp;  TEXT(TracRTC__Log_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>History Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TracRTC__Log_Number__c</fullName>
        <label>Log Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Log_Sort__c</fullName>
        <formula>TEXT(TracRTC__Log_Date__c) &amp;

&quot; &quot; &amp;

CASE(
    LEN(TEXT(TracRTC__Log_Number__c)),
        1, &quot;000&quot; &amp; TEXT(TracRTC__Log_Number__c),
        2, &quot;00&quot; &amp; TEXT(TracRTC__Log_Number__c),
        3, &quot;0&quot; &amp; TEXT(TracRTC__Log_Number__c),
    TEXT(TracRTC__Log_Number__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Matching_Debug_Info__c</fullName>
        <label>Matching Debug Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Modified_Fields__c</fullName>
        <label>Modified Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>History Logs</relationshipLabel>
        <relationshipName>History_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracRTC__Previous_Field_Value__c</fullName>
        <label>Previous Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Realtime_Clean_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record was processed by the Traction Complete service.</description>
        <inlineHelpText>Indicates if the record was processed by the Traction Complete service.</inlineHelpText>
        <label>Traction Complete Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>History Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Logs</pluralLabel>
    <recordTypes>
        <fullName>TracRTC__First_Response</fullName>
        <active>true</active>
        <description>History log used to track the first response time of a lead</description>
        <label>First_Response</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>